# consumer-producer-solutions

./: .gitignore
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt  consprod_kernel_global.h  consprod_kernel_shared.h  consumer.c++  consumer.h  cps_kernel_global.h  cps_kernel_shared.h  irunnable.c++  irunnable.h  itask.c++  itask.h  itaskcreator.c++  itaskcreator.h  itaskfactory.c++  itaskfactory.h  itaskqueue.c++  itaskqueue.h  lockingqueue.c++  lockingqueue.h  producer.c++  producer.h  taskcreator.c++  taskcreator.h  taskfactory.c++  taskfactory.h
src/server/: CMakeLists.txt  connectiondata.h  connectioninfo.h  connectiontask.c++  connectiontask.h  connectiontaskcreator.c++  iconnectiontaskchart.c++  iconnectiontaskfactory.c++  iconnectiontaskfactory.h  ireplyencoder.c++  ireplyencoder.h  irequestdecoder.c++  irequestdecoder.h  isocketcontroller.c++  isocketcontroller.h  requestdata.h  taskscheduler.c++  taskscheduler.h  taskworker.c++  taskworker.h  workloop.c++  workloop.h
src/serverbase/: CMakeLists.txt  connectiontask.h  connectiontaskcreator.c++  connectiontaskcreator.h  cps_server_shared.h  cps_serverbase_shared.h  iconnectiontaskchart.h  iconnectiontaskfactory.c++  iconnectiontaskfactory.h  intercom.c++  intercom.h  ireplyencoder.h  irequestdecoder.h  isocketcontroller.h  maintenancetask.c++  maintenancetask.h  maintenancetaskchart.c++  maintenancetaskchart.h  maintenancetaskfactory.c++  maintenancetaskfactory.h  requestdata.c++  requestdata.h  servercontext.c++  servercontext.h  serverdaemon.c++  serverdaemon.h  taskscheduler.c++  taskscheduler.h  taskworker.c++  taskworker.h  workloop.c++  workloop.h
src/tests/: CMakeLists.txt  main.c++  test_config.h
src/tests/mockserver/: CMakeLists.txt  cps_mockserver_shared.h  mocklogicfacade.c++  mocklogicfacade.h  mockreplyencoder.c++  mockreplyencoder.h  mockrequestdecoder.c++  mockrequestdecoder.h  mockserverdaemon.c++  mockserverdaemon.h  mockservertest.c++  mockservertest.h  mocksocketcontroller.c++  mocksocketcontroller.h  mocktask.c++  mocktask.h  mocktaskchart.c++  mocktaskchart.h  mocktaskfactory.c++  mocktaskfactory.h
src/tests/testbase/: CMakeLists.txt  cps_testbase_shared.h  test.c++  test.h  tester.c++  tester.h
